objects/Sales_Invoice__c/fields/Sales_Invoice_Days__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice_Days__c</fullName>
    <formula>(Posting_Date__c)- DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Posting Date minus created date</inlineHelpText>
    <label>Billing Package Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>