objects/Sales_Invoice__c/fields/Sales_Invoice_Emailed__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice_Emailed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Sent</label>
    <type>Checkbox</type>
</CustomField>