objects/Sales_Invoice__c/fields/Sales_Invoice_Posted__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice_Posted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Invoice Posted</label>
    <type>Checkbox</type>
</CustomField>