objects/Sales_Invoice__c/fields/Sales_Invoice_Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice_Posted_Date__c</fullName>
    <label>Sales Invoice Posted Date</label>
    <type>Date</type>
</CustomField>