objects/Sales_Invoice__c/fields/Sales_Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice_Status__c</fullName>
    <description>used for reporting purposes</description>
    <label>Billing Package Status</label>
    <length>18</length>
    <type>Text</type>
</CustomField>