objects/Sales_Invoice__c/fields/Sales_Order_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Created_By__c</fullName>
    <formula>Sales_Order__r.CreatedBy.FirstName + " " + Sales_Order__r.CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order Created By</label>
    <type>Text</type>
</CustomField>