objects/Sales_Invoice__c/fields/Sales_Order_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Owner__c</fullName>
    <formula>Sales_Order__r.Owner:User.FirstName + Sales_Order__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order Owner</label>
    <type>Text</type>
</CustomField>