objects/Sales_Invoice__c/fields/Sales_Order_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Type_Description__c</fullName>
    <formula>Sales_Order__r.Sales_Order_Type__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order Type Description</label>
    <type>Text</type>
</CustomField>