objects/Sales_Invoice__c/fields/Sales_Quote__c.field-meta.xml
<CustomField>
    <fullName>Sales_Quote__c</fullName>
    <formula>Sales_Order__r.From_Sales_Quote__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Quote</label>
    <type>Text</type>
</CustomField>