objects/Sales_Invoice__c/fields/Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Service_Center__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Center</label>
    <referenceTo>Service_Center__c</referenceTo>
    <relationshipLabel>Sales Invoices</relationshipLabel>
    <relationshipName>Sales_Invoices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>