objects/Sales_Invoice__c/fields/Service_Days__c.field-meta.xml
<CustomField>
    <fullName>Service_Days__c</fullName>
    <formula>(Last_Service_Dates__c  -  First_Service_Date__c) + 1</formula>
    <label>Service Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>