objects/Sales_Invoice__c/fields/Site_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Site_Contact_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Invoices (Site Contact)</relationshipLabel>
    <relationshipName>Sales_Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>