objects/Sales_Invoice__c/fields/Site_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Site_Email_Address__c</fullName>
    <label>Site Email Address</label>
    <type>Email</type>
</CustomField>