objects/Sales_Invoice__c/fields/SO_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>SO_Project_Manager__c</fullName>
    <formula>Sales_Order__r.Project_Coordinator__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SO Project Manager</label>
    <type>Text</type>
</CustomField>