objects/Sales_Invoice__c/fields/SPO_No__c.field-meta.xml
<CustomField>
    <fullName>SPO_No__c</fullName>
    <label>SPO No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>