objects/Sales_Invoice__c/fields/Subsidiary_Company__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Subsidiary Company</label>
    <referenceTo>Subsidiary_Company__c</referenceTo>
    <relationshipLabel>Sales Invoices</relationshipLabel>
    <relationshipName>Sales_Invoices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>