objects/Sales_Invoice__c/fields/Surcharge_Amt_Incl_Tax__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_Amt_Incl_Tax__c</fullName>
    <label>Surcharge Amt Incl. Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>