objects/Sales_Invoice__c/fields/Surcharge_Type__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_Type__c</fullName>
    <label>Surcharge Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>EEC Fee</fullName>
            </value>
            <value>
                <fullName>Fuel Surcharge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>