objects/Sales_Invoice__c/fields/SysPostedDate__c.field-meta.xml
<CustomField>
    <fullName>SysPostedDate__c</fullName>
    <label>SysPostedDate</label>
    <type>Date</type>
</CustomField>