objects/Sales_Invoice__c/fields/T_M_Line_Material_Count__c.field-meta.xml
<CustomField>
    <fullName>T_M_Line_Material_Count__c</fullName>
    <label>T&amp;M Line Material Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>