objects/Sales_Invoice__c/fields/Tax_Area__c.field-meta.xml
<CustomField>
    <fullName>Tax_Area__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tax Area</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Tax_Area__c.Blocked__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Tax_Area__c</referenceTo>
    <relationshipLabel>Sales Invoices</relationshipLabel>
    <relationshipName>Sales_Invoices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>