objects/Sales_Invoice__c/fields/Tax_Liable__c.field-meta.xml
<CustomField>
    <fullName>Tax_Liable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Liable</label>
    <type>Checkbox</type>
</CustomField>