objects/Sales_Invoice__c/fields/TempProcessed__c.field-meta.xml
<CustomField>
    <fullName>TempProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TempProcessed</label>
    <type>Checkbox</type>
</CustomField>