objects/Sales_Invoice__c/fields/TM_Invoice_Relation_Created__c.field-meta.xml
<CustomField>
    <fullName>TM_Invoice_Relation_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TM Invoice Relation Created</label>
    <type>Checkbox</type>
</CustomField>