objects/Sales_Invoice__c/fields/Work_Order_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Type_ID__c</fullName>
    <formula>Sales_Order__r.Sales_Order_Type__r.Work_Order_Type_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Order Type ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>