objects/Sales_Invoice__c/fields/Worksheet__c.field-meta.xml
<CustomField>
    <fullName>Worksheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Worksheet</label>
    <type>Checkbox</type>
</CustomField>