objects/Sales_Invoice__c/fields/X30__c.field-meta.xml
<CustomField>
    <fullName>X30__c</fullName>
    <formula>IF(Days_Sales_Outstanding__c &lt;= 30, true, false)</formula>
    <label>&lt;=30</label>
    <type>Checkbox</type>
</CustomField>