objects/Sales_Invoice__c/fields/X60__c.field-meta.xml
<CustomField>
    <fullName>X60__c</fullName>
    <formula>IF(Days_Sales_Outstanding__c &gt;30 &amp;&amp; Days_Sales_Outstanding__c &lt;= 60,
True, False)</formula>
    <label>&gt;30&lt;=60</label>
    <type>Checkbox</type>
</CustomField>