objects/Sales_Invoice__c/fields/X90__c.field-meta.xml
<CustomField>
    <fullName>X90__c</fullName>
    <formula>IF(Days_Sales_Outstanding__c &gt;60 &amp;&amp; Days_Sales_Outstanding__c &lt;= 90,
true, False)</formula>
    <label>&gt;60&lt;=90</label>
    <type>Checkbox</type>
</CustomField>