objects/Sales_Invoice__c/recordTypes/Open_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Open_Invoice</fullName>
    <active>true</active>
    <label>Open Invoice</label>
</RecordType>