objects/Sales_Invoice__c/recordTypes/Posted_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Posted_Invoice</fullName>
    <active>true</active>
    <label>Posted Invoice</label>
</RecordType>