objects/Sales_Invoice__c/validationRules/InvoiceNote_Field_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>InvoiceNote_Field_Length</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Invoice_Note__c ) &gt; 80</errorConditionFormula>
    <errorMessage>Invoice note value is too long. (max length = 80)  Please edit the Invoice Note and Save.</errorMessage>
</ValidationRule>