objects/Sales_Invoice__c/listViews/Lab_Pack_Sales_Invoices.listView-meta.xml
<ListView>
    <fullName>Lab_Pack_Sales_Invoices</fullName>
    <columns>No__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Bill_to_Customer__c</columns>
    <columns>Document_Status__c</columns>
    <columns>Customer_PO_No__c</columns>
    <columns>Service_Center__c</columns>
    <columns>Invoice_Amt_Incl_Tax__c</columns>
    <columns>Sync_d__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Center__c</field>
        <operation>equals</operation>
        <value>70,72,73,74,75,77</value>
    </filters>
    <label>Lab Pack Sales Invoices</label>
</ListView>