objects/Sales_Invoice__c/listViews/My_Sales_Invoices.listView-meta.xml
<ListView>
    <fullName>My_Sales_Invoices</fullName>
    <columns>No__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Document_Status__c</columns>
    <columns>Customer_PO_No__c</columns>
    <columns>Service_Center__c</columns>
    <columns>Invoice_Amt_Incl_Tax__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Pending_Approval_From__c</columns>
    <filterScope>Mine</filterScope>
    <label>_My Sales Invoices</label>
</ListView>