objects/Sales_Invoice__c/listViews/Pending_Approval.listView-meta.xml
<ListView>
    <fullName>Pending_Approval</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>No__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Posting_Date__c</columns>
    <columns>Document_Status__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>Account_Executive__c</columns>
    <columns>Invoice_Profit_prct__c</columns>
    <columns>Service_Center__c</columns>
    <columns>Invoice_Amt_Incl_Tax__c</columns>
    <columns>Bill_to_Customer__c</columns>
    <columns>Invoice_Lines__c</columns>
    <columns>Pending_Approval_From__c</columns>
    <columns>Sync_d__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Document_Status__c</field>
        <operation>notEqual</operation>
        <value>Void</value>
    </filters>
    <filters>
        <field>Document_Type__c</field>
        <operation>equals</operation>
        <value>Sales Invoice</value>
    </filters>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Pending_Approval</value>
    </filters>
    <label>Pending Approval</label>
</ListView>