objects/Sales_Invoice__c/listViews/SC02.listView-meta.xml
<ListView>
    <fullName>SC02</fullName>
    <columns>No__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Document_Status__c</columns>
    <columns>Customer_PO_No__c</columns>
    <columns>Service_Center__c</columns>
    <columns>Invoice_Amt_Incl_Tax__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Approval_Status__c</columns>
    <columns>Pending_Approval_From__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Center__c</field>
        <operation>equals</operation>
        <value>02</value>
    </filters>
    <label>SC02</label>
</ListView>