objects/Sales_Invoice__c/listViews/SC07.listView-meta.xml
<ListView>
    <fullName>SC07</fullName>
    <columns>No__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>Bill_to_Customer__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Document_Status__c</columns>
    <columns>Customer_PO_No__c</columns>
    <columns>Service_Center__c</columns>
    <columns>Invoice_Amt_Incl_Tax__c</columns>
    <columns>Invoice_Profit_prct__c</columns>
    <columns>Invoice_Profit__c</columns>
    <columns>Payment_Age__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Status__c</field>
        <operation>equals</operation>
        <value>Fully Paid</value>
    </filters>
    <filters>
        <field>Service_Center__c</field>
        <operation>equals</operation>
        <value>07</value>
    </filters>
    <label>SC07</label>
</ListView>