objects/Sales_Invoice__c/listViews/SC16_Sales_Invoices.listView-meta.xml
<ListView>
    <fullName>SC16_Sales_Invoices</fullName>
    <columns>No__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Document_Status__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Customer_PO_No__c</columns>
    <columns>Service_Center__c</columns>
    <columns>Invoice_Amt_Incl_Tax__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Center__c</field>
        <operation>equals</operation>
        <value>16</value>
    </filters>
    <label>SC16 Sales Invoices</label>
</ListView>