objects/Sales_Invoice__c/listViews/SC21.listView-meta.xml
<ListView>
    <fullName>SC21</fullName>
    <columns>No__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Document_Status__c</columns>
    <columns>Customer_PO_No__c</columns>
    <columns>Service_Center__c</columns>
    <columns>Invoice_Amt_Incl_Tax__c</columns>
    <columns>Payment_Age__c</columns>
    <columns>Invoice_Profit_prct__c</columns>
    <columns>Posting_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Center__c</field>
        <operation>equals</operation>
        <value>21</value>
    </filters>
    <label>SC21</label>
</ListView>